[gd_scene load_steps=8 format=3 uid="uid://e8v7rmdi6ctx"]

[ext_resource type="Texture2D" uid="uid://beix3pdhjg763" path="res://background.jpg" id="1_kyuro"]
[ext_resource type="Script" path="res://scene5.gd" id="1_sm53o"]
[ext_resource type="FontFile" uid="uid://dvwbsssrsjdn7" path="res://MightySouly-lxggD.ttf" id="2_076ox"]
[ext_resource type="Texture2D" uid="uid://t5rlvur50ifx" path="res://triangle.jpeg" id="3_jxbjn"]
[ext_resource type="VideoStream" path="res://WhatsApp-Video-2024-04-16-at-9.55.21-PM.ogv" id="4_2cfgg"]
[ext_resource type="Texture2D" uid="uid://ug6blqredpj3" path="res://rectangle.jpeg" id="4_v827t"]
[ext_resource type="Texture2D" uid="uid://f5eqmii2b74q" path="res://circle1.png" id="6_pwvro"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_sm53o")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 2.0
offset_top = 5.0
offset_right = 1152.0
offset_bottom = 664.0
texture = ExtResource("1_kyuro")

[node name="Label" type="Label" parent="."]
offset_left = 308.0
offset_top = 18.0
offset_right = 831.0
offset_bottom = 92.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_076ox")
theme_override_font_sizes/font_size = 60
text = "SHAPE MATCHING GAME"

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 418.0
offset_top = 123.0
offset_right = 723.0
offset_bottom = 287.0
texture = ExtResource("4_v827t")
expand_mode = 1

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
visibility_layer = 2
offset_left = 403.0
offset_top = 219.0
offset_right = 750.0
offset_bottom = 507.0
stream = ExtResource("4_2cfgg")

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 41.0
offset_top = 373.0
offset_right = 347.0
offset_bottom = 538.0
texture_normal = ExtResource("4_v827t")

[node name="TextureButton2" type="TextureButton" parent="."]
offset_left = 442.0
offset_top = 355.0
offset_right = 695.0
offset_bottom = 570.0
texture_normal = ExtResource("6_pwvro")
stretch_mode = 0

[node name="TextureButton3" type="TextureButton" parent="."]
offset_left = 768.0
offset_top = 337.0
offset_right = 1021.0
offset_bottom = 552.0
texture_normal = ExtResource("3_jxbjn")
stretch_mode = 0

[node name="NextButton" type="Button" parent="."]
offset_left = 933.0
offset_top = 574.0
offset_right = 1140.0
offset_bottom = 652.0
theme_override_fonts/font = ExtResource("2_076ox")
theme_override_font_sizes/font_size = 30
text = "NEXT"

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="TextureButton3" to="." method="_on_texture_button_3_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_button_pressed"]
